fixed the letter spacing issue in headings

--- a/src/pages/Landing/NewUserReview/styles.css
+++ b/src/pages/Landing/NewUserReview/styles.css
@@ -3,7 +3,7 @@
   width: auto;
   display: flex;
   flex-direction: column;
-  margin-top: 2rem;
+  margin-top: 0rem !important;
   padding-bottom: 2rem;
   background-color: lightgray;
 }
@@ -80,6 +80,7 @@
   }
   .UserReviewHead{
     font-size: 30px !important;
+    letter-spacing: 0px !important;
   }
 
 }
