--- a/src/pages/Landing/UserReviews/styles.css
+++ b/src/pages/Landing/UserReviews/styles.css
@@ -12,6 +12,9 @@
   flex-direction: column;
   align-items: center;
 }
+.TopContent--Container{
+  padding-top: 35px;
+}
 
 .userReviewsContainer--Bottom {
   margin-top: 4rem;
@@ -59,6 +62,7 @@
   .TopContent--Container {
     padding-left: 2rem;
     padding-right: 2rem;
+    padding-top: 2rem;
   }
 
   .userReviewsContainer--Bottom {
